[package]
name = "fuzz-lighthouse"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fuzz-lighthouse"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
failure = "0.1.8" # Error
structopt = "0.3.15" # cli parsing
clap = "2.31.2"
strsim = "0.10.0"
fs_extra = "1.3.0"
strum = "0.18.0"
strum_macros = "0.18.0"
basic_mutator = { git = "https://github.com/gamozolabs/basic_mutator" }
targets = { path = "./targets"}

[workspace]
exclude = [
  "fuzzer",
  "targets",
]

[patch]
[patch.crates-io]
# warp = { git = "https://github.com/macladson/warp", rev="7e75acc368229a46a236a8c991bf251fe7fe50ef" }
eth2_ssz = { path = "../lighthouse/consensus/ssz" }
eth2_ssz_derive = { path = "../lighthouse/consensus/ssz_derive" }
eth2_ssz_types = { path = "../lighthouse/consensus/ssz_types" }
eth2_hashing = { path = "../lighthouse/crypto/eth2_hashing" }
tree_hash = { path = "../lighthouse/consensus/tree_hash" }
tree_hash_derive = { path = "../lighthouse/consensus/tree_hash_derive" }
eth2_serde_utils = { path = "../lighthouse/consensus/serde_utils" }
arbitrary = { git = "https://github.com/michaelsproul/arbitrary", rev="a572fd8743012a4f1ada5ee5968b1b3619c427ba" }

[patch."https://github.com/ralexstokes/mev-rs"]
mev-rs = { git = "https://github.com/ralexstokes//mev-rs", rev = "7813d4a4a564e0754e9aaab2d95520ba437c3889" }
[patch."https://github.com/ralexstokes/ethereum-consensus"]
ethereum-consensus = { git = "https://github.com/ralexstokes//ethereum-consensus", rev = "9b0ee0a8a45b968c8df5e7e64ea1c094e16f053d" }
[patch."https://github.com/ralexstokes/ssz-rs"]
ssz-rs = { git = "https://github.com/ralexstokes//ssz-rs", rev = "adf1a0b14cef90b9536f28ef89da1fab316465e1" }
